fix alignement du separateur gauche du menu de navigation (mal centré)

--- a/webapp/app/assets/stylesheets/modules/_navigation.scss
+++ b/webapp/app/assets/stylesheets/modules/_navigation.scss
@@ -134,7 +134,7 @@
       &:before {
         content: "";
         position: absolute;
-        left: 15px;
+        left: 10px;
         top: 3px;
         height: 13px;
         border-right: 2px solid #334051;
